--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,13 +23,17 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/multi-${{ matrix.service }}
 
-      # - name: Beanstalk Deploy
-      #   uses: einaregilsson/beanstalk-deploy@v20
-      #   with:
-      #     aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      #     aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      #     application_name: ${{ secrets.AWS_APPLICATION_NAME }}
-      #     environment_name: ${{ secrets.AWS_ENVIRONMENT_NAME }}
-      #     version_label: ${{ github.sha }}
-      #     region: us-east-1
-      #     deployment_package: Dockerrun.aws.json
+      - name: Generate deployment package
+        run: zip -r deploy.zip . -x '*.git*'
+
+      - name: Beanstalk Deploy
+        uses: einaregilsson/beanstalk-deploy@v20
+        with:
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          application_name: ${{ secrets.AWS_APPLICATION_NAME }}
+          environment_name: ${{ secrets.AWS_ENVIRONMENT_NAME }}
+          existing_bucket_name: elasticbeanstalk-us-east-1-008971671370
+          version_label: ${{ github.sha }}
+          region: us-east-1
+          deployment_package: deploy.zip
