--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,17 @@
 version: "3"
 services:
-  postgres:
-    image: "postgres:latest"
+  client:
+    image: "rallycoding/multi-client"
+    mem_limit: 128m
+    hostname: client
+
     environment:
-      - POSTGRES_PASSWORD=postgres_password
-  redis:
-    image: "redis:latest"
-  nginx:
-    depends_on:
-      - api
-      - client
-    restart: always
-    build:
-      dockerfile: Dockerfile.dev
-      context: ./nginx
-    ports:
-      - "3050:80"
-  api:
-    build:
-      dockerfile: Dockerfile.dev
-      context: ./server
-    volumes:
-      - /usr/app/node_modules
-      - ./server:/usr/app
+      - WDS_SOCKET_PORT=0
+  server:
+    image: "rallycoding/multi-server"
+    mem_limit: 128m
+    hostname: api
+
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
@@ -31,22 +20,30 @@ services:
       - PGDATABASE=postgres
       - PGPASSWORD=postgres_password
       - PGPORT=5432
-  client:
-    build:
-      dockerfile: Dockerfile.dev
-      context: ./client
-    volumes:
-      - /usr/app/node_modules
-      - ./client:/usr/app
-    environment:
-      - WDS_SOCKET_PORT=0
   worker:
-    build:
-      dockerfile: Dockerfile.dev
-      context: ./worker
-    volumes:
-      - /usr/app/node_modules
-      - ./worker:/usr/app
+    image: "rallycoding/multi-worker"
+    mem_limit: 128m
+    hostname: worker
+
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
+  nginx:
+    depends_on:
+      - api
+      - client
+    restart: always
+    
+    image: "rallycoding/multi-nginx"
+    mem_limit: 128m
+    hostname: nginx
+    ports:
+      - "80:80"
+
+
+  postgres:
+    image: "postgres:latest"
+    environment:
+      - POSTGRES_PASSWORD=postgres_password
+  redis:
+    image: "redis:latest"
