--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
 version: "3"
 services:
   client:
-    image: "rallycoding/multi-client"
+    image: "austynyou/multi-client"
     mem_limit: 128m
     hostname: client
 
     environment:
       - WDS_SOCKET_PORT=0
   server:
-    image: "rallycoding/multi-server"
+    image: "austynyou/multi-server"
     mem_limit: 128m
     hostname: api
 
@@ -21,7 +21,7 @@ services:
       - PGPASSWORD=postgres_password
       - PGPORT=5432
   worker:
-    image: "rallycoding/multi-worker"
+    image: "austynyou/multi-worker"
     mem_limit: 128m
     hostname: worker
 
@@ -33,8 +33,8 @@ services:
       - api
       - client
     restart: always
-    
-    image: "rallycoding/multi-nginx"
+
+    image: "austynyou/multi-nginx"
     mem_limit: 128m
     hostname: nginx
     ports:
