--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,46 +4,28 @@ services:
     image: "austynyou/v2-multi-client"
     mem_limit: 128m
     hostname: client
-
-    environment:
-      - WDS_SOCKET_PORT=0
   server:
     image: "austynyou/v2-multi-server"
     mem_limit: 128m
     hostname: api
-
     environment:
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-      - PGUSER=postgres
-      - PGHOST=postgres
-      - PGDATABASE=postgres
-      - PGPASSWORD=postgres_password
-      - PGPORT=5432
+      - REDIS_HOST=$REDIS_HOST
+      - REDIS_PORT=$REDIS_PORT
+      - PGUSER=$PGUSER
+      - PGHOST=$PGHOST
+      - PGDATABASE=$PGDATABASE
+      - PGPASSWORD=$PGPASSWORD
+      - PGPORT=$PGPORT
   worker:
     image: "austynyou/v2-multi-worker"
     mem_limit: 128m
     hostname: worker
-
     environment:
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
+      - REDIS_HOST=$REDIS_HOST
+      - REDIS_PORT=$REDIS_PORT
   nginx:
-    depends_on:
-      - api
-      - client
-    restart: always
-
     image: "austynyou/v2-multi-nginx"
     mem_limit: 128m
     hostname: nginx
     ports:
       - "80:80"
-
-
-  postgres:
-    image: "postgres:latest"
-    environment:
-      - POSTGRES_PASSWORD=postgres_password
-  redis:
-    image: "redis:latest"
