--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,3 +43,4 @@ jobs:
           version_label: ${{ github.sha }}
           region: us-east-1
           deployment_package: deploy.zip
+          use_existing_version_if_available: true
