--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,9 +8,6 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        service: [client, server, nginx, worker]
     steps:
       - name: Checkout Source
         uses: actions/checkout@v2
@@ -22,20 +19,26 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Docker build and push
-        uses: docker/build-push-action@v2
-        with:
-          context: ./${{ matrix.service }}
-          file: ./${{ matrix.service }}/Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/v2-multi-${{ matrix.service }}
+      - run: docker build -t austynyou/v2-multi-client ./client
+      - run: docker build -t austynyou/v2-multi-nginx ./nginx
+      - run: docker build -t austynyou/v2-multi-server ./server
+      - run: docker build -t austynyou/v2-multi-worker ./worker
+      
+      - run: docker push austynyou/v2-multi-client
+      - run: docker push austynyou/v2-multi-nginx
+      - run: docker push austynyou/v2-multi-server
+      - run: docker push austynyou/v2-multi-worker
+
+      - name: Generate deployment package
+        run: zip -r deploy.zip . -x '*.git*'
 
       - name: Beanstalk Deploy
-        uses: einaregilsson/beanstalk-deploy@v20
+        uses: einaregilsson/beanstalk-deploy@v18
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           application_name: ${{ secrets.AWS_APPLICATION_NAME }}
           environment_name: ${{ secrets.AWS_ENVIRONMENT_NAME }}
-          version_label: ${{github.run_id}}
           region: us-east-1
-          deployment_package: Dockerrun.aws.json
+          version_label: ${{ github.sha }}
+          deployment_package: deploy.zip
