--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,9 +8,6 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        service: [client, server, nginx, worker]
     steps:
       - name: Checkout Source
         uses: actions/checkout@v2
@@ -21,16 +18,18 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Docker build and push
-        uses: docker/build-push-action@v2
-        with:
-          context: ./${{ matrix.service }}
-          file: ./${{ matrix.service }}/Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/v2-multi-${{ matrix.service }}
+      - run: docker build -t austynyou/v2-multi-client ./client
+      - run: docker build -t austynyou/v2-multi-nginx ./nginx
+      - run: docker build -t austynyou/v2-multi-server ./server
+      - run: docker build -t austynyou/v2-multi-worker ./worker
+
+      - run: docker push austynyou/v2-multi-client
+      - run: docker push austynyou/v2-multi-nginx
+      - run: docker push austynyou/v2-multi-server
+      - run: docker push austynyou/v2-multi-worker
 
       - name: Beanstalk Deploy
-        uses: einaregilsson/beanstalk-deploy@v20
+        uses: einaregilsson/beanstalk-deploy@v18
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
