--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,9 @@ jobs:
       - run: docker push austynyou/v2-multi-server
       - run: docker push austynyou/v2-multi-worker
 
+      - name: Generate deployment package
+        run: zip -r deploy.zip . -x '*.git*'
+
       - name: Beanstalk Deploy
         uses: einaregilsson/beanstalk-deploy@v18
         with:
@@ -37,4 +40,4 @@ jobs:
           environment_name: ${{ secrets.AWS_ENVIRONMENT_NAME }}
           region: us-east-1
           version_label: ${{ github.sha }}
-          deployment_package: Dockerrun.aws.json
+          deployment_package: deploy.zip
